--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -10,7 +10,7 @@
     {% endblock %}
     <!-- Main Content -->
     {% block forms %}
-    <main class="main-content pt-5 ">
+    <main class="main-content" style="margin-top: 50px;">
 
         {% if messages %}
         {% for message in messages %}
