--- a/Autenticacion/static/css/diseño_auth.css
+++ b/Autenticacion/static/css/diseño_auth.css
@@ -66,7 +66,8 @@ body{
 
 
 .enlace .btn-pass {
-    display: inline-block; /* Solo ocupa el espacio del texto */
+    display: inline; /* Solo ocupa el espacio del texto */
+    align-items: center;
     padding: 10px 20px; /* Espaciado interno */
     font-size: 1rem; /* Tamaño de la fuente */
     color: white; /* Color del texto */
