--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -77,7 +77,7 @@
             <li>
                 <a class="nav-link active" href="{% url 'reportes:listar_reportes' %}">
                     <i class="fa-sharp fa-solid fa-rectangle-list"></i>
-                    <span class="nav-item"> Reportes </span>
+                    <span class="nav-item"> Reportes de Incidentes</span>
                 </a>
             </li>
             {% endif %}
