--- a/Autenticacion/static/css/map.css
+++ b/Autenticacion/static/css/map.css
@@ -1,26 +1,22 @@
 #map{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    box-shadow: 2px 2px 3px 3px #a5a4a4;
 }
 
-.form-map{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
 
 .form-grid-map{
     grid-template-columns: repeat(2, 1fr)!important;
 }
-@media (max-width: 1000px) {
+@media (width < 1000px) {
     #map{
-        width: 100%;
-        height: 100%;
+        width: 350px;
+        height: 350px;
     }
-    .form-map{
+    .form-grid.form-grid-map{
+        display: flex;
         flex-direction: column;
     }
-    .form-grid-map{
-        grid-template-columns: repeat(1, 1fr);
-    }
+    
+    
 }
