--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg bg-dark sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
         <!-- Logo -->
         <a href="/" class="navbar-brand">
@@ -22,7 +22,7 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="me-2"><b>{{ nombre }} {{ apellido }}</b></span>
                     </a>
-                    <ul class="dropdown-menu w-105">
+                    <ul class="dropdown-menu dropdown-menu-dark w-105">
                         <li><a class="dropdown-item" href="/">Inicio</a></li>
                         <li><a class="dropdown-item" href="{% url 'login:cambiar_clave' %}">Cambiar contraseña</a></li>
                         <li><hr class="dropdown-divider"></li>
