--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="div-btn">
-                <button type="submit" class="btn btn-save align-items-center">Guardar registro</button>
-                <a href="{{ cancelar }}" class="btn btn-cancel nav-link text-center align-items-center">
+                <button type="submit" class="btn btn-save">Guardar registro</button>
+                <a href="{{ cancelar }}" class="btn btn-cancel text-center">
                     Cancelar
                 </a>
             </div>
